@@ -15,3 +15,5 @@ Running poll test 1
 Poll test 1 complete
 Running poll test 2
 Poll test 2 complete
+Running poll test 3
+Poll test 3 complete
